Fix mobile resume alignment and contact tab index

--- a/asset/css/media_query.css
+++ b/asset/css/media_query.css
@@ -448,7 +448,7 @@
 
     .small_yellow_border_main {
         padding-left: 0px;
-        text-align: center;
+        text-align: left;
     }
 
     .experience_main_text {
